Fixed alignment of the ABB logo

--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ header{
 }
 
 #abblogo{
-    margin-top: 5px;
+    margin-top: 9px;
 }
 
 .overlay{
